# Reversi

./: CMakeLists.txt
etc/: git_log.txt  ids.txt
exe/: client.out  server.out  settings.txt
gtest_src/gtest/: gtest-all.cc  gtest.h
include/: AIPlayer.h  Board.h  Cell.h  ConsoleUI.h  Counter.h  Game.h  Player.h  UserInterface.h
lib/googletest-release-1.8.0/googlemock/: CMakeLists.txt
lib/googletest-release-1.8.0/googlemock/docs/: CheatSheet.md
lib/googletest-release-1.8.0/googlemock/scripts/: fuse_gmock_files.py  gmock_doctor.py  upload.py  upload_gmock.py
lib/googletest-release-1.8.0/googlemock/src/: gmock-all.cc  gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
lib/googletest-release-1.8.0/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-internal-utils_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-port_test.cc  gmock-spec-builders_test.cc  gmock_all_test.cc  gmock_ex_test.cc  gmock_leak_test.py  gmock_leak_test_.cc  gmock_link2_test.cc  gmock_link_test.cc  gmock_link_test.h  gmock_output_test.py  gmock_output_test_.cc  gmock_stress_test.cc  gmock_test.cc  gmock_test_utils.py
lib/googletest-release-1.8.0/googletest/: CMakeLists.txt
lib/googletest-release-1.8.0/googletest/cmake/: internal_utils.cmake
lib/googletest-release-1.8.0/googletest/codegear/: gtest_all.cc  gtest_link.cc
lib/googletest-release-1.8.0/googletest/docs/: AdvancedGuide.md  V1_5_AdvancedGuide.md  V1_6_AdvancedGuide.md  V1_7_AdvancedGuide.md
lib/googletest-release-1.8.0/googletest/samples/: prime_tables.h  sample1.cc  sample1.h  sample10_unittest.cc  sample1_unittest.cc  sample2.cc  sample2.h  sample2_unittest.cc  sample3-inl.h  sample3_unittest.cc  sample4.cc  sample4.h  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
lib/googletest-release-1.8.0/googletest/scripts/: common.py  fuse_gtest_files.py  gen_gtest_pred_impl.py  pump.py  release_docs.py  upload_gtest.py
lib/googletest-release-1.8.0/googletest/src/: gtest-all.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
lib/googletest-release-1.8.0/googletest/test/: gtest-death-test_ex_test.cc  gtest-death-test_test.cc  gtest-filepath_test.cc  gtest-linked_ptr_test.cc  gtest-listener_test.cc  gtest-message_test.cc  gtest-options_test.cc  gtest-param-test2_test.cc  gtest-param-test_test.cc  gtest-param-test_test.h  gtest-port_test.cc  gtest-printers_test.cc  gtest-test-part_test.cc  gtest-tuple_test.cc  gtest-typed-test2_test.cc  gtest-typed-test_test.cc  gtest-typed-test_test.h  gtest-unittest-api_test.cc  gtest_all_test.cc  gtest_break_on_failure_unittest.py  gtest_break_on_failure_unittest_.cc  gtest_catch_exceptions_test.py  gtest_catch_exceptions_test_.cc  gtest_color_test.py  gtest_color_test_.cc  gtest_env_var_test.py  gtest_env_var_test_.cc  gtest_environment_test.cc  gtest_filter_unittest.py  gtest_filter_unittest_.cc  gtest_help_test.py  gtest_help_test_.cc  gtest_list_tests_unittest.py  gtest_main_unittest.cc  (+27 more)
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  Cell.cpp  Cell.h  Client.cpp  Client.h  ConsoleUI.cpp  ConsoleUI.h  Counter.cpp  Counter.h  FlipMoveLogic.cpp  FlipMoveLogic.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  ManualPlayer.cpp  ManualPlayer.h  Player.cpp  Player.h  RemotePlayer.cpp  RemotePlayer.h  UserInterface.h  color.h  main.cpp
src/client/: AIPlayer.cpp  AIPlayer.h  Client.cpp  Client.h  ConsoleUI.cpp  ConsoleUI.h  Counter.h  Game.cpp  ManualPlayer.cpp  ManualPlayer.h  Player.h  RemotePlayer.cpp  RemotePlayer.h  UserInterface.h  color.h  main.cpp  makefile  settings.txt
src/server/: CMakeLists.txt
src/server/server/: ClientHandler.cpp  ClientHandler.h  Close.cpp  Close.h  Command.h  CommandsManager.cpp  CommandsManager.h  Join.cpp  Join.h  ListGame.cpp  ListGame.h  Play.cpp  Play.h  Room.cpp  Room.h  Server.cpp  Server.h  Start.cpp  Start.h  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp  makefile
src/test/: gtest_ManualPlayer.cpp  test_AiPlayer.cpp  test_board.cpp  test_logic.cpp
test/: gtest_ManualPlayer.cpp  gtest_main.cpp  test_AiPlayer.cpp  test_board.cpp  test_logic.cpp
(+49 files in other folders)
